--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.17.0
   flutter_riverpod: ^2.3.7
   go_router: ^10.1.2
+  flutter_secure_storage: ^8.0.0
+  dio: ^5.1.1
 
 dev_dependencies:
   flutter_test:
