--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -16,6 +16,7 @@ tr:
       row_3: "Ödeme Vadesi:"
       row_4: "Nakliye:"
       row_5: "Ödeme Şekli:"
+      order_confirmed: "Hazırlanıyor"
     invoice:
       row_1: "Fatura Tarihi:"
       row_2: "Ödeme Tarihi:"
