--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -17,6 +17,7 @@ tr:
       row_4: "Nakliye:"
       row_5: "Ödeme Şekli:"
       order_confirmed: "Hazırlanıyor"
+      order_approved: "Yeni Sipariş"
     invoice:
       row_1: "Fatura Tarihi:"
       row_2: "Ödeme Tarihi:"
