--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   go_router: ^10.1.2
   flutter_secure_storage: ^8.0.0
   dio: ^5.1.1
+  dropdown_button2: ^2.1.4
 
 dev_dependencies:
   flutter_test:
