--- a/.github/workflows/staging_deploy.yml
+++ b/.github/workflows/staging_deploy.yml
@@ -18,6 +18,18 @@ jobs:
           flutter-version: '3.7.10'
           channel: 'stable'
     - run: flutter build apk --split-per-abi
+    - run: flutter build appbundle
+    
+    - name: Sign App Bundle
+      uses: r0adkll/sign-android-release@v1   
+      id: sign_app
+      with:
+        releaseDirectory: build/app/outputs/bundle/release/
+        signingKeyBase64: ${{ secrets.ANDROID_KEYSTORE_FILE_BASE64 }}
+        alias: ${{ secrets.ANDROID_SIGNING_KEY_ALIAS }}         
+        keyStorePassword: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}             
+        keyPassword: ${{ secrets.ANDROID_SIGNING_KEY_PASSWORD }}
+
       env:
         API_URL: ${{ secrets.API_URL }}
         USERNAME: ${{ secrets.SERVICE_USER }}
