--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^8.0.0
   dio: ^5.1.1
   dropdown_button2: ^2.1.4
+  web_socket_channel: ^2.4.0
 
 dev_dependencies:
   flutter_test:
