--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         minSdkVersion 18
-        applicationId "com.satta.paletpoint_app"
+        applicationId "com.satta.paletPoint"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         //minSdkVersion flutter.minSdkVersion
@@ -55,7 +55,11 @@ android {
     }
 
     buildTypes {
-
+        release {
+        }
+        debug {
+            signingConfig signingConfigs.debug  // sign with a debug signature. 
+        }
     }
 }
 
