refactor home page app bar and order table

--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -48,6 +48,7 @@ tr:
     row_2: "Miktar"
     row_3: "Fiyat"
     row_4: "Toplam"
+    row_5: "Sevk"
   detail_info:
     proposal: 
       row_1: "Talep Tarihi:"
