--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "buyer_mobile" "\0"
+            VALUE "CompanyName", "Satta" "\0"
+            VALUE "FileDescription", "PaletPoint" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "buyer_mobile" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "buyer_mobile.exe" "\0"
-            VALUE "ProductName", "buyer_mobile" "\0"
+            VALUE "InternalName", "PaletPoint" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 Satta. All rights reserved." "\0"
+            VALUE "OriginalFilename", "PaletPoint.exe" "\0"
+            VALUE "ProductName", "PaletPoint" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
