--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.buyer_mobile">
+    package="com.satta.paletPointApp">
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
    <application
-        android:label="buyer_mobile"
+        android:label="PaletPoint"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
