--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^5.1.1
   dropdown_button2: ^2.1.4
   web_socket_channel: ^2.4.0
+  swipe: ^0.0.1
 
 dev_dependencies:
   flutter_test:
