--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   dropdown_button2: ^2.1.4
   web_socket_channel: ^2.4.0
   swipe: ^0.0.1
+  file_picker: ^5.3.1
 
 dev_dependencies:
   flutter_test:
