--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -7,6 +7,8 @@ tr:
     success: "Giriş Başarılı"
     send_btn: "Gönder"
     reset_password: "Yeni Şifre İsteği"
+  home: 
+    empty_notification: "Yeni bildiriminiz yok."
   proposal:
     proposal_detail: "Teklif Detayları"
     proposal_period: "Teslim Süresi"
