add validation in edit proposal and generate invoice pages

--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -89,5 +89,10 @@ tr:
     generate_invoice: "Faturala"
     invoice_info: "Fatura Bilgileri"
     message: "Mesaj"
+  validations:
+    tgs: "Teklif geçerlilik süresi boş bırakılamaz."
+    payment_type: "Ödeme şekli boş bırakılamaz."
+    price: "Lütfen fiyat giriniz."
+    invoice_no: "Fatura no boş bırakılamaz."
       
 
