add sign up and profile pages

--- a/assets/flutter_i18n/tr.yaml
+++ b/assets/flutter_i18n/tr.yaml
@@ -7,6 +7,27 @@ tr:
     success: "Giriş Başarılı"
     send_btn: "Gönder"
     reset_password: "Yeni Şifre İsteği"
+    sign_up: "Kayıt Ol"
+    sign_up_page: 
+      name: "Ad Soyad"
+      email: "E-posta Adresi"
+      password: "Şifre"
+      firm: "Firma"
+      address: "Adres"
+      city: "Şehir"
+      phone_number: "Telefon"
+      tax_center: "Vergi Dairesi"
+      tax_no: "Vergi Numarası"
+      success: "Kayıt Başarılı"
+      error: "Kayıt Başarısız"
+      error_msg: "Lütfen doldurunuz."
+      terms_agreement: "Şartları Kabul Ediyorum."
+      profile: "Profilim"
+  profile:
+    settings: "Ayarlar"
+    logout: "Çıkış Yap"
+    contract: "Üyelik Sözleşmesi"
+    open_contract: "Tedarikçi üyelik sözleşmesini incele"
   proposal:
     proposal_detail: "Teklif Detayları"
     proposal_period: "Teslim Süresi"
