--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   web_socket_channel: ^2.4.0
   swipe: ^0.0.1
   permission_handler: ^11.0.1
+  file_picker: ^5.3.1
 
 dev_dependencies:
   flutter_test:
