--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   swipe: ^0.0.1
   permission_handler: ^11.0.1
   file_picker: ^5.3.1
+  image_picker: ^1.0.4
 
 dev_dependencies:
   flutter_test:
