--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   permission_handler: ^11.0.1
   file_picker: ^5.3.1
   image_picker: ^1.0.4
+  photo_view: ^0.14.0
 
 dev_dependencies:
   flutter_test:
